--- a/PROJECTS/SESI-5/package.json
+++ b/PROJECTS/SESI-5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MobileDeviceProgramming",
+  "name": "intraction_ui",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,17 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.81.4",
-    "@react-navigation/bottom-tabs": "^7.4.8",
-    "@react-navigation/drawer": "^7.5.9",
-    "@react-navigation/native": "^7.1.18",
-    "@react-navigation/native-stack": "^7.3.27",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "@react-native-community/slider": "^5.0.1",
+    "@react-native/new-app-screen": "0.82.0",
+    "react": "19.1.1",
+    "react-native": "0.82.0",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0"
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,17 +26,17 @@
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.81.4",
-    "@react-native/eslint-config": "0.81.4",
-    "@react-native/metro-config": "0.81.4",
-    "@react-native/typescript-config": "0.81.4",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "0.82.0",
+    "@react-native/metro-config": "0.82.0",
+    "@react-native/typescript-config": "0.82.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
   "engines": {
